# openshelf

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE.md  README.en.md  README.md  REPO_REVIEW.md  SKILL.md  app.py  build_exe.py  config.toml  openshelf.spec  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/: openshelf.icns
docs/: screenshot-workflow.md  third-party-ebook-tooling.md
installer/: openshelf.iss
openshelf/: __init__.py  acsm.py  browser.py  calibre.py  classify.py  cli.py  config.py  export.py  logsetup.py  manifest.py  playbooks.py  reader.py  service.py  session.py  update.py
openshelf/ui/: __init__.py  i18n.py  main_window.py
tests/: test_acsm.py  test_calibre.py  test_classify.py  test_config.py  test_export.py  test_i18n.py  test_integration.py  test_logsetup.py  test_manifest.py  test_playbooks.py  test_reader.py  test_service.py  test_update.py
tools/: generate_readme_screenshot.py
