[project]
name = "openshelf"
version = "1.0.1"
description = "枚舉並批次匯出 Google Play 圖書：無 DRM 書下載 EPUB/PDF，DRM 書下載官方 .acsm 供 Adobe Digital Editions 閱讀。"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE.md"]
authors = [{ name = "SanHsien", email = "sanhsien@pm.me" }]
dependencies = [
    "playwright>=1.44",
    "httpx>=0.27",
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
build = ["pyinstaller>=6.6"]

[project.scripts]
openshelf = "openshelf.cli:main"

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["openshelf*"]
